2017-03-01 : IsoformSwitchAnalyzeR 1.1.04 (major)
    - Fixed a problem which could cause signal peptides not to be plotted - we highly remend redoing switchPlots (only the visualizations were affected - not the underlying analysis). Thanks to Maxim Ivanov for discovring the problem.
    - Added indication of update importance (minor/major) retrospectively to the NEWS

2017-02-27 : IsoformSwitchAnalyzeR 1.1.03 (minor)
    - Small updates to the switchPlot* functions making them more robust to edge cases
    - Fixed a problem in the assignment of NAs to isoforms without ORFs. The example datasets were updated accordingly.
    - Various small imporvements for robustness.

2017-02-21 : IsoformSwitchAnalyzeR 1.1.02 (minor)
    - Update to accommodate analysis of no-replicate pilot experiments (see guide in vignette)
    - Various small bug-fixes

2017-12-19 : IsoformSwitchAnalyzeR 1.1.01 (minor)
    - (The large version-bump is due to the release of the next itteration of Bioconductor)
    - Corrections for a lot of spelling mistakes in the package - huge shoutout to @khoegenauer for the suggestions
    - A few small updates to import functions making the progress even smoother

2017-10-25 : IsoformSwitchAnalyzeR v0.99.15 (minor)
    - Fixed a small mistake in the documentation causing build warnings

2017-10-22 : IsoformSwitchAnalyzeR v0.99.14 (minor)
    - isoformSwitchTestDRIMSeq() was updated to per default use dmFilter()
    - Small updates to documentation better explaining the functionalities from udate 0.99.12

2017-10-19 : IsoformSwitchAnalyzeR v0.99.13 (minor)
    - Version bump for Bioconductor to keep up

2017-10-12 : IsoformSwitchAnalyzeR v0.99.12 (major)
    - importIsoformExpression() have been completely redesigned to utilize the tximport package as well as implementing the option for inter-library normalization of abundance (TxPM) values.
    - The vignette got a thorough workover - huge shoutout to Maria Dalby for the help!