@@ -51,7 +51,7 @@ Additional columns can be used to describe other co-factors such as batch effect
 \item{isoformExonAnnoation}{
 Can either be:
 \itemize{
-    \item{\code{1}: A string indicating the full path to the GTF file which have been quantified. If supplied the exon structure and isoform annotation will be obtained from the GTF file.}
+    \item{\code{1}: A string indicating the full path to the GTF file which have been quantified. If supplied the exon structure and isoform annotation will be obtained from the GTF file. An example could be "/myAnnotation/myGenome/gersionQuantified.gtf")}
     \item{\code{2}: A \code{GRange} object (see \code{?GRanges}) containing one entry per exon per isoform with the genomic coordinat of that isoform. This \code{GRange} should furthmore contain two meta data columns called 'isoform_id' and 'gene_id' indicating both which isoform the exon belongs to as well as which gene the isoform belongs to. The 'isoform_id' column must match the isoform ids used in the 'isoform_id' column of the \code{isoformRepExpression} data.frame. If possible we suggest that a third columns called 'gene_name' with the corresponding gene names is also added. If not supplied gene_name will be annotated as NA.}
 }
 }
@@ -135,6 +135,15 @@ colnames(designMatrix) <- c('sampleID','condition')
 
 localAnnotaion <- import(system.file("extdata/chr1_snippet.gtf", package="cummeRbund"))[,c('transcript_id','gene_id')]
 colnames(localAnnotaion@elementMetadata)[1] <- 'isoform_id'
+
+### Please note
+# 1) The way of importing the GTF file in the example with
+#       "system.file('pathToFile', package="cummeRbund") is
+#       specialiced to access the sample data in the cummeRbund package
+#       and not somhting you need to do - just supply the string e.g.
+#       "/myAnnotation/myGenome/gersionQuantified.gtf" to the import function
+# 2) importRdata also supports direct import of a GTF file - just supply the
+#       path to the isoformExonAnnoation argument
 
 
 ### Take a look at the data
